<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_marginTop="@dimen/activity_vertical_margin"
              android:gravity="center"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_user"
            android:contentDescription="@string/profile"/>

        <Spinner
            android:id="@+id/browser_profile"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="48dip"
            android:spinnerMode="dropdown"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="25dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/ic_action_tag"
            android:contentDescription="@string/tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <AutoCompleteTextView
            android:id="@+id/browser_tag"
            android:inputType="text"
            android:singleLine="true"
            android:maxLines="1"
            android:maxLength="25"
            android:completionThreshold="2"
            android:hint="@string/tag"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>

        <ImageButton
            android:id="@+id/browser_tag_settings"
            android:src="@drawable/ic_action_gear"
            android:contentDescription="@string/tag_settings"
            android:layout_width="48dp"
            android:layout_height="48dp"
            style="?android:borderlessButtonStyle"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="25dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tag_layout">

        <ImageView
            android:src="@drawable/ic_action_key"
            android:contentDescription="@string/master_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/browser_master_key"
            android:inputType="textPassword"
            android:singleLine="true"
            android:maxLines="1"
            android:maxLength="25"
            android:fontFamily="sans-serif"
            android:hint="@string/master_key"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/browser_digest"
            android:gravity="center"
            android:paddingLeft="4dip"
            android:paddingRight="4dip"
            android:layout_width="48dip"
            android:layout_height="48dip"
            style="@android:style/TextAppearance.Medium"/>

    </LinearLayout>

    <LinearLayout
        android:gravity="bottom"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:showDividers="middle"
        android:divider="?android:dividerHorizontal">

        <View
            android:layout_width="fill_parent"
            android:layout_height="0dp"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:divider="?android:dividerHorizontal"
            style="?android:buttonBarStyle">

            <Button
                android:id="@+id/browser_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:buttonBarButtonStyle"
                android:text="@string/cancel"/>

            <Button
                android:id="@+id/browser_hash"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="?android:buttonBarButtonStyle"
                android:layout_weight="1"
                android:text="@string/hash"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>